--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ opencv-python>=4.8.0
 pillow>=10.0.0
 albumentations>=1.3.0
 imageio>=2.33.0
+ultralytics>=8.1.0
 
 # Visualization
 matplotlib>=3.7.0
